fix bug with z-index issues

--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -13,6 +13,10 @@
   display: none;
 }
 
+.lg-select > button {
+  z-index: 5;
+}
+
 /* styling button's content */
 .lg-select > button > div > div > div {
   display: flex;
